refactor(piece table): minor tweaks